trunk/Archive2/76/fced237163a6de/output
main.cpp: In function 'int main()':
main.cpp:23:8: error: no matching function for call to 'f(int)'
     f(1); // not OK
        ^
main.cpp:23:8: note: candidate is:
main.cpp:13:6: note: template<class stream_t, class T> typename std::enable_if<(! has_cout<stream_t, T>::value)>::type f(stream_t&, const T&)
 auto f(stream_t &s, const T& x) 
      ^
main.cpp:13:6: note:   template argument deduction/substitution failed:
main.cpp:23:8: note:   candidate expects 2 arguments, 1 provided
     f(1); // not OK
        ^
